syntax = "proto3";

package api;

option go_package = "github.com/bsko/casino-transaction-system/api";

import "google/protobuf/timestamp.proto";

message TransactionEvent {
  string user_id = 1;
  TransactionType transaction_type = 2;
  double amount = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum TransactionType {
  TRANSACTION_TYPE_BET = 0;
  TRANSACTION_TYPE_WIN = 1;
}

